tests/ui/feature-gates/feature-gate-late-bound-turbofishing.stderr
error[E0794]: cannot specify lifetime arguments explicitly if late bound lifetime parameters are present
  --> $DIR/feature-gate-late-bound-turbofishing.rs:8:43
   |
LL |     let f /* : FooFnItem<????> */ = foo::<'static>;
   |                                           ^^^^^^^
   |
   = note: this may change in the future; see issue #156581 <https://github.com/rust-lang/rust/issues/156581> for more information
note: the late bound lifetime parameter is introduced here
  --> $DIR/feature-gate-late-bound-turbofishing.rs:4:8
   |
LL | fn foo<'a>(b: &'a u32) -> &'a u32 { b }
   |        ^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0794`.
